--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.0'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'application'
 }
 
 group = 'com.example'
@@ -27,6 +28,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+
+application {
+    mainClass = 'com.example.demo.DemoApplication'
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
